# direct-deps

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
.github/workflows/: main.yaml
src/direct_deps/: __main__.py  cli.py  cli_beta.py  distribution_metadata.py  import_analyzer.py  project_utils.py  virtualenv_utils.py
tests/: cli_beta_test.py  sample_test.py
